--- a/docs/.theme/assets/_variables.scss
+++ b/docs/.theme/assets/_variables.scss
@@ -1,4 +1,4 @@
-$color-brand: var(--color-brand);
+$color-brand: var(--color-logo-mark);
 
 $color-bg: var(--color-bg);
 $color-bg-second: var(--color-bg-2);
@@ -9,21 +9,28 @@ $color-bg-code: var(--color-bg-3);
 $color-bg-active: var(--color-bg-2);
 $color-bg-table-nth-child: var(--color-bg-2);
 
-$color-box-danger: var(--color-danger);
+$color-box-danger: var(--color-red);
 $color-box-default: var(--color-fg);
-$color-box-info: var(--color-info);
-$color-box-tip: var(--color-success);
-$color-box-warning: var(--color-warning);
+$color-box-info: var(--color-blue);
+$color-box-tip: var(--color-green);
+$color-box-warning: var(--color-yellow);
 
 $color-fg: var(--color-fg);
 $color-fg-second: var(--color-fg-2);
 $color-fg-code: var(--color-fg);
+
+$font-default: var(--font-default);
+$font-heading: var(--font-heading);
+$font-size: var(--font-size);
+
+$height-logo: var(--height-logo);
 
 $url-logo-full: var(--url-logo-full);
 $url-logo-full-mono: var(--url-logo-full-mono);
 $url-logo-mark: var(--url-logo-mark);
 $url-logo-mark-mono: var(--url-logo-mark-mono);
 
+$width-content: var(--width-content);
 $width-tolerance: 50px;
 $width-page: 1768px + $width-tolerance;
 $width-page-l: 1280px + $width-tolerance;
